fix collapsed sidebar

--- a/pkgs/app/src/components/ProjectHeader/Staging/index.module.scss
+++ b/pkgs/app/src/components/ProjectHeader/Staging/index.module.scss
@@ -15,8 +15,12 @@
 
 .edit {
   cursor: pointer;
+
   width: 34px;
+  margin-right: 10px;
+
   font-size: $font-l;
+  text-align: center;
 }
 
 .badge {
