--- a/pkgs/app/src/components/Sidebar/index.module.scss
+++ b/pkgs/app/src/components/Sidebar/index.module.scss
@@ -26,7 +26,7 @@
   &.collapsed {
     &.sidebar {
       overflow: hidden;
-      width: 58px;
+      width: 68px;
     }
 
     .inner {
